test/Fail/ParseErrorDoubleDot.err
ParseErrorDoubleDot.agda:4,5-5
ParseErrorDoubleDot.agda:4,5: Parse error
<EOF><ERROR>
...
